# rust-formal-verification

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: ic3_on_easy_examples_benchmark.rs
src/: fsts.rs  lib.rs
src/algorithms/: bmc.rs  formula_logic.rs  ic3.rs  ic3_test.rs  ic3_v2.rs  mod.rs  pdr.rs
src/algorithms/proof/: ic3_stateful_solver.rs  ic3_stateless_solver.rs  mod.rs  pdr.rs  pdr_v1.rs  proof_result.rs  rfv1.rs
src/formulas/: clause.rs  cnf.rs  cube.rs  literal.rs  logic.rs  mod.rs  variable.rs
src/models/: finite_state_transition_system.rs  mod.rs
src/models/and_inverter_graph/: aig.rs  aig_node.rs  aiger.rs  aiger_node.rs  construction.rs  conversion.rs  getting.rs  mod.rs  simulation.rs
src/models/finite_state_transition_system/: construction.rs  features.rs  fsts.rs  getting.rs  mod.rs
src/solvers/: minisat.rs  mod.rs  sat_response.rs  sat_solver.rs  z3Solver.rs  z3_solver.rs
src/solvers/sat/: assignment.rs  cadical_solver.rs  mod.rs  sat_response.rs  splr_solver.rs  varisat_solver.rs
src/solvers/sat/stateful/: cadical_solver.rs  minisat_solver.rs  mod.rs
src/solvers/sat/stateless/: cadical_solver.rs  mod.rs  splr_solver.rs  varisat_solver.rs
src/traits/: mod.rs
src/traits/formulas/: clause_trait.rs  cnf_trait.rs  literal_trait.rs  mod.rs  variable_trait.rs
tests/: aig_creation.rs  aig_reading.rs  bmc.rs  compare_provers.rs  formula_creation.rs  fsts_creation.rs  ic3.rs  ic3_stateful.rs  ic3_stateless.rs  pdr.rs  sanity.rs  sat_solving.rs
tests/common/: mod.rs
tests/examples/: aigtoaag.py  help.py
tests/examples/hwmcc20/2019/beem/: anderson.3.prop1-back-serstep_zero_then_fold2.aag  anderson.3.prop1-back-serstep_zero_then_fold2.aig  at.6.prop1-back-serstep.aag  at.6.prop1-back-serstep_zero_then_fold2.aag  at.6.prop1-back-serstep_zero_then_fold2.aig  blocks.4.prop1-back-serstep.aag  blocks.4.prop1-back-serstep_zero_then_fold2.aag  blocks.4.prop1-back-serstep_zero_then_fold2.aig  brp2.2.prop1-func-interl.aag  brp2.2.prop1-func-interl_zero_then_fold2.aag  brp2.2.prop1-func-interl_zero_then_fold2.aig  brp2.3.prop1-back-serstep_zero_then_fold2.aag  brp2.3.prop1-back-serstep_zero_then_fold2.aig  brp2.6.prop3-back-serstep_zero_then_fold2.aag  brp2.6.prop3-back-serstep_zero_then_fold2.aig  elevator.4.prop1-func-interl.aag  elevator.4.prop1-func-interl_zero_then_fold2.aag  elevator.4.prop1-func-interl_zero_then_fold2.aig  (+19 more)
tests/examples/our_examples/: counter.aig
tests/examples/ours/: counter_with_2_bad_assertions.aag  counter_with_bad_assertion.aag  counter_with_bad_assertion.aig
tests/hwmcc20_aag/: aigtoaag.py
tests/hwmcc20_aag/2019/beem/: anderson.3.prop1-back-serstep.aag  brp2.3.prop1-back-serstep.aag  brp2.6.prop3-back-serstep.aag  frogs.5.prop1-func-interl.aag  mcs.3.prop1-back-serstep.aag  msmie.3.prop1-func-interl.aag  peg_solitaire.3.prop1-back-serstep.aag  rushhour.4.prop1-func-interl.aag
tests/hwmcc20_aag/2020/mann/: rast-p00.aag  rast-p01.aag  rast-p14.aag  rast-p19.aag  rast-p21.aag  simple_alu.aag  stack-p2.aag
tests/simple_examples/: counter.aag  counter_with_2_bad_assertions.aig
(+906 files in other folders)
