###################################################################################################
# package
###################################################################################################

[package]
name = "rust-formal-verification"
version = "0.1.6"
edition = "2021"
authors = ["Andrew Luka"]
description = "A rust library that makes it easier to develop, prototype and test new algorithms for formal verification like IC3, PDR, AVY and others."
license = "MIT"
repository = "https://github.com/sirandreww/rust-formal-verification.git"
readme = "README.md"
documentation = "https://docs.rs/rust-formal-verification"
exclude = ["tests/examples/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

###################################################################################################
# dependencies
###################################################################################################

[dependencies]
# SAT solvers
splr = "0.16.3"
varisat = "0.2.2"
cadical = "0.1.13"
# other crates
rand = "0.8.5"
priority-queue = "1.2.3"

###################################################################################################
# dev-dependencies
###################################################################################################

[dev-dependencies]
pretty_assertions = "1.3.0"
walkdir = "2.3.2"
# for benchmarks
criterion = "0.4.0"

###################################################################################################
# bench
###################################################################################################

# benchmarks
[[bench]]
name = "ic3_on_easy_examples_benchmark"
harness = false